# album_shuffle-backend

./: pyproject.toml
app/: constants.py  main.py  oauth.py
app/sections/album/models/: __init__.py
app/sections/album/routes/: __init__.py
app/sections/auth/routes/: __init__.py
