[project]
name = "album_shuffle_backend"
version = "0.1.0"
description = "album shuffle backend"
requires-python = ">=3.11"
dependencies = [
    "authlib>=1.6.1",
    "fastapi[standard]>=0.116.1",
    "itsdangerous>=2.2.0",
    "spotipy>=2.25.1",
    "starlette>=0.47.2",
]

[dependency-groups]
dev = [
    "ruff>=0.12.5",
]
