[project]
name = "album_shuffle_backend"
version = "0.1.0"
description = "album shuffle backend"
requires-python = ">=3.11"
dependencies = [
    "aiohttp[speedups]>=3.13.1",
    "async-lru>=2.0.5",
    "authlib>=1.6.1",
    "fastapi[standard]>=0.116.1",
    "itsdangerous>=2.2.0",
    "starlette>=0.47.2",
]

[dependency-groups]
dev = [
    "ruff>=0.12.5",
]
